nav and header upates

--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -499,7 +499,7 @@
     color: #fff; }
   .theme-dark .react-custom-select .css-1xc3v61-indicatorContainer svg {
     fill: #fff; }
-  .theme-dark .react-custom-select .css-19bb58m, .theme-dark .react-custom-select .css-1dimb5e-singleValue {
+  .theme-dark .react-custom-select .css-19bb58m, .theme-dark .react-custom-select .css-1dimb5e-singleValue, .theme-dark .react-custom-select input {
     color: #fff; }
   .theme-dark .react-custom-select .css-1jj59y3-MenuList2 {
     background: #292D32 !important; }
