--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -772,7 +772,7 @@ $dark-block-2: #2B2C2E;
         }
     }
     .react-custom-select {
-        .css-19bb58m, .css-1dimb5e-singleValue{
+        .css-19bb58m, .css-1dimb5e-singleValue, input{
             color: $primary-light;
         }
         .css-1jj59y3-MenuList2{
