--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -2760,6 +2760,7 @@ flex-wrap: wrap;
         align-items: center;
         justify-content: center;
         position: relative;
+        height: 50px !important;
         &:before{
             content: '';
             left: calc(-50% - 14px);
@@ -3509,6 +3510,38 @@ section.buy-props {
         @media($sm-1679)
         {
             margin-right: 27px;
+        }
+    }
+}
+.ambassador-program-outer{
+    padding-top: 70px;
+    @media($sm-1679){
+        padding-top: 50px;
+    }
+    @media($sm-1481){
+        padding-top: 45px;
+    }
+    @media($sm-991){
+        padding-top: 30px;
+    }
+    @media($sm-579){
+        padding-top: 25px;
+    }
+}
+
+.body-content-outer-home{
+    .filter-wrapper {
+        padding-bottom: 0 !important;
+        overflow-y: hidden;
+        overflow-x: auto;
+        .filter-nav-btn-wrapper{
+            .filter-nav-btn{
+                white-space: nowrap;
+                padding: 12px 12px;
+                &::after{
+                    bottom: 1px;
+                }
+            }
         }
     }
 }
