--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -160,12 +160,15 @@
                 .title-icon{
                     min-width: 25px;
                     margin-right: 15px;
+                    img{
+                        filter: brightness(0) saturate(100%) invert(25%) sepia(12%) saturate(2507%) hue-rotate(186deg) brightness(95%) contrast(96%);
+                    }
                 }
                 h2{
                     margin-bottom: 0;
                     font-size: 20px;
                     font-weight: 700;
-                    color: $primary-dark;
+                    color: $text-primary-dark;
                 }
             }
             .title-btn-block{
@@ -818,5 +821,264 @@
                 }
             }
         }
+    }
+}
+
+.my-portfolio-col-lg{
+    .title-wrapper{
+        border-bottom: solid 1px #E3E4F3;
+    }
+    .content-wrapper-portfolio{
+        display: flex;
+        padding-top: 18px;
+        .portfolio-col-3{
+            border-right: solid 1px #E3E4F3;
+            width: calc(100% / 3);
+            padding: 0 60px 15px;
+            margin-bottom: 15px;
+            &:first-child{
+                padding-left: 30px;
+            }
+            &:last-child{
+                padding-right: 30px;
+                border-right: 0;
+            }
+            .portfolio-card-title{
+                display: flex;
+                align-items: center;
+                border: solid 1px #E3E4F3;
+                border-radius: 10px;
+                padding: 12px 16px;
+                width: 100%;
+                .sub-title-block{
+                    align-items: center;
+                    display: flex;
+                    h6{
+                        font-size: 14px;
+                        margin-bottom: 0;
+                        color: $text-primary-dark;
+                        margin-left: 15px;
+                    }
+                }
+                .title-info{
+                    margin-left: auto;
+                }
+            }
+            .content-item{
+                padding-top: 40px;
+            }
+            .eql-sec{
+                display: flex;
+            }
+            .eql-block{
+                display: flex;
+                align-items: center;
+                .icon{
+                    flex: 0 0 auto;
+                    margin-right: 15px;
+                }
+                .eql-content{
+                    p{
+                        color: $text-primary-dark;
+                        margin-bottom: 4px;
+                        font-size: 14px;
+                    }
+                    h6{
+                        font-weight: 600;
+                        color: $text-primary-dark;
+                        margin-bottom: 0;
+                        font-size: 17px;
+                    }
+                }
+                &.eql-block-left{
+                    padding-right: 10px;
+                }
+                &.eql-block-right{
+                    margin-left: auto;
+                    .icon{
+                        margin-right: 8px;
+                    }                   
+                }
+            }
+            .tab-item-wrapper{
+                display: flex;
+                margin-bottom: 25px;
+                color: $text-primary-dark;
+                &:last-child{
+                    margin-bottom: 0;
+                }
+                .tab-item-label{
+                    padding-right: 5px;
+                    font-size: 14px;
+                    flex: 1 1 auto;
+                }
+                .tab-item-cnt{
+                    text-align: right;
+                    flex: 0 0 auto;
+                    font-size: 16px;
+                    font-weight: 600;
+                }
+            }
+        }
+    }
+}
+@media ($sm-1679) {
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3:first-child {
+        padding-left: 15px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3:last-child {
+        padding-right: 15px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 {
+        padding: 0 30px 15px;
+        margin-bottom: 10px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .portfolio-card-title {
+        padding: 10px 13px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .eql-block {
+        .icon{
+            img{
+                max-height: 46px;
+            }
+        }
+        .eql-content {
+            h6{
+                font-size: 15px;
+            }
+            p{
+                font-size: 13px;
+            }
+        }
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .content-item {
+        padding-top: 28px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .tab-item-wrapper {
+        margin-bottom: 16px;
+        .tab-item-label {
+            font-size: 13px;
+        }
+        .tab-item-cnt{
+            font-size: 15px;
+        }
+    }
+}
+@media ($sm-1481) {
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3:first-child {
+        padding-left: 10px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3:last-child {
+        padding-right: 10px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 {
+        padding: 0 20px 15px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .portfolio-card-title .sub-title-block h6 {
+        font-size: 13px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .eql-block .eql-content h6 {
+        font-size: 14px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .eql-block .icon {
+        margin-right: 10px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .eql-block .icon img {
+        max-height: 44px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .eql-block.eql-block-right .icon img {
+        max-height: 22px;
+    }
+}
+@media ($sm-1199) {
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3:first-child {
+        padding-left: 0;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3:last-child {
+        padding-right: 0;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 {
+        padding: 0 15px 15px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .portfolio-card-title .sub-title-block {
+        img{
+            max-width: 30px;
+        }
+        h6 {
+            margin-left: 8px;
+        }
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .tab-item-wrapper .tab-item-cnt {
+        font-size: 14px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .tab-item-wrapper .tab-item-label {
+        font-size: 12px;
+    }
+}
+@media ($sm-991) {
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3{
+        width: calc(50% - 8px);
+        margin-bottom: 20px;
+        border: solid 1px #E3E4F3 !important;
+        border-radius: 8px;
+        padding: 10px !important;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio{
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}
+@media(max-width: 700px){
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio{
+        flex-direction: column;
+    }
+}
+@media ($sm-579) {
+    .portfolio-sec .portfolio-card .table-pagination-cover{
+        flex-direction: column;
+        .select-block{
+            margin-bottom: 15px;
+        }
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .content-item {
+        padding-top: 20px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .tab-item-wrapper {
+        margin-bottom: 12px;
+    }
+}
+
+@media(max-width: 360px){
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .eql-block{
+        width: 100%;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .eql-sec{
+        flex-wrap: wrap;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .eql-block.eql-block-right{
+        padding-top: 15px;
+        padding-left: 10px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .eql-block.eql-block-right .icon {
+        margin-right: 20px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .portfolio-card-title {
+        padding: 10px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .portfolio-card-title .sub-title-block img {
+        max-width: 26px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .portfolio-card-title .sub-title-block h6 {
+        font-size: 12px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .tab-item-wrapper .tab-item-label {
+        font-size: 11px;
+    }
+    .my-portfolio-col-lg .content-wrapper-portfolio .portfolio-col-3 .tab-item-wrapper .tab-item-cnt {
+        font-size: 13px;
     }
 }
