--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1248,4 +1248,7 @@ $dark-block-2: #2B2C2E;
     .img-dark-theme{
         display: inline-block;
     }
+    .table-cover .custom-table{
+        background-color: $dark-bg;
+    }
 }
